tests/sksl/errors/FieldAfterRuntimeArray.sksl
buffer brokenA { float x[];              float y; };
buffer brokenB { float x[] = float[](0); float y; };
